# HILO

./: README  README.md
PCB/: .gitignore  README
PCB/ElectricProtections/: fuses.kicad_sch  main.kicad_pcb  main.kicad_sch
PCB/IOlinesManagement/: IO_0116.kicad_sch  dirController_0116.kicad_sch  inputs_0116.kicad_sch  main.kicad_pcb  main.kicad_sch  outputs_0116.kicad_sch
PCB/MasterControlUnit/: main.kicad_pcb  main.kicad_sch
PCB/kicadCustomComponents/STM32F407G-DISC1/: MODULE_STM32F407G-DISC1.kicad_mod  STM32F407G-DISC1.kicad_sym
console/: .gitignore  KeypadWidget.cpp  MyWindow.cpp  README.md  build.pro  envVarOverriding.pri  gdbToConfig.pri
console/KeypadWidget/: KeypadWidget.cpp  KeypadWidget.h  KeypadWidget.pro  KeypadWidget.ui
console/KeypadWidget/test/: test.pro
console/PinStrip/: ConnectionOverlay.cpp  ConnectionOverlay.h  PinStrip.cpp  PinStrip.h  PinStrip.pro  PinStrip.ui  pinConnection.cpp  pinConnection.h
console/PinStrip/test/: TestWidget.cpp  TestWidget.h  ToolWidget.cpp  ToolWidget.h  test.cpp  test.pro
console/PinWidget/: PinWidget.cpp  PinWidget.h
console/PinWidget/test/: ConnectButton.cpp  ConnectButton.h  ConnectionOverlay.cpp  ConnectionOverlay.h  test.cpp  test.pro
console/inputDevs/KeypadWidget/: KeypadWidget.cpp  KeypadWidget.h  KeypadWidget.pro  KeypadWidget.ui
console/inputDevs/KeypadWidget/test/: .gitignore  MyWindow.cpp  test.cpp  test.pro
console/mainApp/: HILO_console.cpp  MyWindow.cpp  MyWindow.h  build.pro  mainApp.pro
console/qmakeTools/: cleanallRuleForApp.pri  cleanallRuleForLib.pri  utils.pri
console/sharedComps/PinStrip/: ConnectionOverlay.cpp  ConnectionOverlay.h  PinStrip.cpp  PinStrip.h  PinStrip.pro  pinConnection.cpp  pinConnection.h
console/sharedComps/PinStrip/test/: .gitignore  TestWidget.cpp  ToolWidget.cpp  ToolWidget.h  test.cpp  test.pro
console/sharedComps/PinWidget/: PinWidget.cpp  PinWidget.h  PinWidget.pro
console/sharedComps/PinWidget/test/: ConnectButton.h  ConnectionOverlay.h  test.pro
console/sharedComps/uiUtils/: DragController.cpp  DragController.h  uiUtils.pro
console/sharedComps/uiUtils/DragController_test/: .gitignore  DragController_test.cpp  DragController_test.pro  movableButton.h
firmware/: README  README.md
firmware/HILO_engine/: .cproject  .mxproject  .project  HILO_engine.ioc  README  STM32F031K6TX_FLASH.ld
firmware/HILO_engine/Core/Src/: main.c
firmware/HILO_interface/: .gitignore  CMakeLists.txt  README  README.md  configUtils.cmake  sdkconfig
firmware/HILO_interface/components/crossPlatform_code/: debugTools.h  wError.h
firmware/HILO_interface/components/restApiServer/: CMakeLists.txt  restApiServer.c
firmware/HILO_interface/components/sram_manager/: CMakeLists.txt  sram_manager.c
firmware/HILO_interface/main/: CMakeLists.txt  HILO_interface.c  clink.sh  iTest__RestAPI.c  iTest__wirelessAP.c  iTest__wirelessExternalNet.c  prod.c
images/: Makefile  README.md  overviewDiagram.puml  overviewFirmwarSequenceDiagram.puml  overviewFirmwarSequenceDiagram_intvMode.puml
(+38 files in other folders)
